feat: make app deployment ready with Docker, authentication fixes, and comprehensive documentation
- Add Docker configuration for containerized deployment
- Fix authentication hook and dashboard visibility
- Add comprehensive README with setup and deployment instructions
- Update .gitignore for production deployment
- Create .env.example for environment configuration
- Add docker-compose.yml for easy deployment
- Fix server stability issues for production builds
- Add health checks and proper error handling

--- a/client/index.html
+++ b/client/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>BlogMaster - SEO Optimized Blogging Platform</title>
-    <meta name="description" content="Create, publish, and monetize your blog content with powerful SEO tools and AdSense integration. Write engaging articles on Business, Design, Technology, Lifestyle, News, and Marketing." />
-    <meta property="og:title" content="BlogMaster - SEO Optimized Blogging Platform" />
-    <meta property="og:description" content="Create, publish, and monetize your blog content with powerful SEO tools and AdSense integration." />
+    <title>Testcraft World - SEO Optimized Blogging Platform</title>
+    <meta name="description" content="Create, publish, and monetize your blog content with powerful SEO tools and AdSense integration on Testcraft World. Write engaging articles on Business, Design, Technology, Lifestyle, News, and Marketing." />
+    <meta property="og:title" content="Testcraft World - SEO Optimized Blogging Platform" />
+    <meta property="og:description" content="Create, publish, and monetize your blog content with powerful SEO tools and AdSense integration on Testcraft World." />
     <meta property="og:type" content="website" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
